# vivi2d

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES  biome.json  electron-builder.yml  index.html  package-lock.json  package.json  rust-toolchain.toml  tsconfig.json  tsconfig.packages.json  vite.aliases.ts  vite.config.ts  vitest.config.ts  wrangler.jsonc
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  docs-maintainers.json
e2e/: fixtures.ts  global.d.ts  globals.d.ts  perf-budgets.json  playwright.config.ts  project-manifest.d.mts  project-manifest.mjs  tsconfig.json
electron/: http-util.cjs  ipc-contract.cjs  main.cjs  preload.cjs  security.cjs  window.cjs
integrations/comfyui/vivi2d_compat_plugin/: README.md  __init__.py  pyproject.toml
integrations/comfyui/vivi2d_compat_plugin/tests/: test_backend.py  test_manifest.py  test_manifest_fuzz.py  test_nodes.py  test_psd_export.py
integrations/comfyui/vivi2d_compat_plugin/vivi2d_compat/: __init__.py  backend.py  capabilities.py  manifest.py  nodes.py  psd_export.py
integrations/comfyui/vivi2d_compat_plugin/vivi2d_compat/schema/: vivi2d_manifest_v1.json
scripts/: architecture-boundaries.manifest.json  build-runtime-package.mjs  check-architecture-boundaries.mjs  check-auto-setup-ip-compliance.mjs  check-bundle-budget.mjs  check-clean-room-coverage.mjs  check-content-safety-integrity.mjs  check-core-model-current-fixtures.mjs  check-direct-model-mutations.mjs  check-docs-architecture.mjs  (+96 more)
(+1022 files in other folders)
